header and nav created

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    
+    <header class="lg:max-w-[1200px] max-w-[350px] m-auto">
+        <nav class="flex py-5 items-center justify-between">
+           <div><img src="./images/IMAGE.png" alt=""></div>
+           <ul class="flex gap-4 text-[#211F54]">
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Pages</li>
+            <li>Contact</li>
+           </ul>
+           <div class="flex items-center gap-5">
+            <p class="text-[#211F54]">Cart ( 0 )</p>
+            <button class="bg-[#0075FF] px-4 py-2 rounded-[10px] text-white">Get a free quote</button>
+           </div>
+        </nav>
+        <section class="flex items-center">
+            <aside class="flex flex-col lg:w-[45%] gap-4">
+                <h1 class="text-[#211F54] text-[60px] font-bold">Quality cleaning for your home</h1>
+                <p class="text-[#6E7191] text-[20px]">Condimentum mauris sit cursus amet id non neque pharetra nulla ornare sed facilisis senectus dapibus nibh ultrices eget suscipit aliquet et nulla magna lacus penatibus.</p>
+            <div class="flex items-center gap-3">
+                <div>
+                    <button class="bg-[#0075FF] text-[20px] px-8 py-5 rounded-[20px] text-white">Get a free quote</button>
+                </div>
+                <div class="flex items-center">
+                    <img src="./images/IMAGE (2).png" alt="">
+                    <div>
+                        <p class="text-[#6E7191] text-[20px]">Call us now</p>
+                        <h1 class="text-[#211F54] text-[25px] font-bold">(414) 567 - 2109</h1>
+                    </div>
+                </div>
+            </div>
+            </aside>
+            <img src="./images/IMAGE (1).png" alt="">
+        </section>
+    </header>
 </body>
 </html>
