--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header class="lg:max-w-[1200px] max-w-[350px] m-auto">
         <nav class="flex py-5 items-center justify-between">
            <div><img src="./images/IMAGE.png" alt=""></div>
-           <ul class="flex gap-4 text-[#211F54]">
+           <ul class="lg:flex hidden gap-4 text-[#211F54] ">
             <li>Home</li>
             <li>About</li>
             <li>Services</li>
@@ -18,15 +18,15 @@
             <li>Contact</li>
            </ul>
            <div class="flex items-center gap-5">
-            <p class="text-[#211F54]">Cart ( 0 )</p>
+            <p class="text-[#211F54] lg:block hidden">Cart ( 0 )</p>
             <button class="bg-[#0075FF] px-4 py-2 rounded-[10px] text-white">Get a free quote</button>
            </div>
         </nav>
-        <section class="flex items-center">
+        <section class="flex items-center lg:flex-row flex-col lg:gap-0 gap-10">
             <aside class="flex flex-col lg:w-[45%] gap-4">
                 <h1 class="text-[#211F54] text-[60px] font-bold">Quality cleaning for your home</h1>
                 <p class="text-[#6E7191] text-[20px]">Condimentum mauris sit cursus amet id non neque pharetra nulla ornare sed facilisis senectus dapibus nibh ultrices eget suscipit aliquet et nulla magna lacus penatibus.</p>
-            <div class="flex items-center gap-3">
+            <div class="lg:flex hidden items-center gap-3">
                 <div>
                     <button class="bg-[#0075FF] text-[20px] px-8 py-5 rounded-[20px] text-white">Get a free quote</button>
                 </div>
