--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,36 @@
             <img src="./images/IMAGE (1).png" alt="">
         </section>
     </header>
+
+        <main>
+            <section class="lg:max-w-[1200px] flex flex-col gap-8 m-auto max-w-[350px]">
+                <h1 class="text-center text-[#211F54] text-[50px] font-bold">How our service works?</h1>
+                <p class="text-center text-[#6E7191] text-[20px]">Sagittis nibh scelerisque vitae eget vulputate sem elementum sed <br> neque nisi felis non ultrices massa id egestas quam velit pretium nu.</p>
+            <div class="flex lg:flex-row flex-col justify-between lg:gap-0 gap-6">
+                <article class="lg:w-[33%] w-[100%] flex  flex-col items-center px-3 text-center">
+                    <img src="./images/IMAGE (3).png" alt="">
+                    <h1 class="text-[#211F54] text-[30px]">1. Schedule online</h1>
+                    <p class="text-[#6E7191] text-[18px]">Sagittis nibh scelerisque vitae egetolment vulputate sem elementum sed n.</p>
+                </article>
+                <article class="lg:w-[33%] w-[100%] flex  flex-col items-center px-3 text-center">
+                    <img src="./images/IMAGE (4).png" alt="">
+                    <h1 class="text-[#211F54] text-[30px]">2. Pay online easily</h1>
+                    <p class="text-[#6E7191] text-[18px]">Vitae ut accumsan blandit ullamcorperolm suscipit dui gravida amet at nunc.</p>
+                </article>
+                <article class="lg:w-[33%] w-[100%] flex  flex-col items-center px-3 text-center">
+                    <img src="./images/IMAGE (5).png" alt="">
+                    <h1 class="text-[#211F54] text-[30px]">3. Get your house cleaned</h1>
+                    <p class="text-[#6E7191] text-[18px]">Nunc maecenas sollicitudin metus tellus mattis sed porttitor cursus eleifend.</p>
+                </article>
+            </div>
+            <div class="flex gap-4 justify-center">
+                <button class="bg-[#0075FF] text-[18px] text-white px-6 rounded-[10px] py-3">Get a free quote</button>
+                <button class=" text-[18px] border-[#14142B0A] border-[1px] px-6 rounded-[10px] py-3">Get a free quote</button>
+                
+            </div>
+            </section>
+        </main>
+
+
 </body>
 </html>
