--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,37 @@
             <div class="flex gap-4 justify-center">
                 <button class="bg-[#0075FF] text-[18px] text-white px-6 rounded-[10px] py-3">Get a free quote</button>
                 <button class=" text-[18px] border-[#14142B0A] border-[1px] px-6 rounded-[10px] py-3">Get a free quote</button>
-                
             </div>
+            </section>
+
+            <section class="lg:max-w-[1200px] max-w-[350px] flex flex-col gap-4 m-auto">
+                <div class="flex justify-between lg:flex-row flex-col lg:text-start text-center">
+                    <h1 class="text-[#211F54] text-[40px] font-bold">Take a look at our <br> professional services</h1>
+                      <button class=" text-[18px] border-[#14142B0A] border-[1px] px-6 rounded-[10px] py-3">Get a free quote</button>
+                </div>
+                <div class="flex lg:flex-row flex-col gap-5">
+                    <article class="lg:w-[33%]  w-[100%] flex flex-col items-center gap-2 px-8 text-center py-3 justify-center shadow-[0px_0px_30px_4px_#14142B0A]">
+                        <div>
+                            <img src="./images/home1 (2).png" >
+                        </div>
+                        <h1 class="text-[#211F54] text-[25px] font-bold">House cleaning</h1>
+                        <p class="text-[#6E7191] text-[18px]">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc lacus vel facilisis volutpat est.</p>
+                    </article>
+                    <article class="lg:w-[33%]  w-[100%] flex flex-col items-center gap-2 px-8 text-center py-3 justify-center shadow-[0px_0px_30px_4px_#14142B0A]">
+                        <div>
+                            <img src="./images/home2.png" >
+                        </div>
+                        <h1 class="text-[#211F54] text-[25px] font-bold">Office cleaning</h1>
+                        <p class="text-[#6E7191] text-[18px]">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc lacus vel facilisis volutpat est.</p>
+                    </article>
+                    <article class="lg:w-[33%]  w-[100%] flex flex-col items-center gap-2 px-8 text-center py-3 justify-center shadow-[0px_0px_30px_4px_#14142B0A]">
+                        <div>
+                            <img src="./images/home3.png" >
+                        </div>
+                        <h1 class="text-[#211F54] text-[25px] font-bold">Industrial cleaning</h1>
+                        <p class="text-[#6E7191] text-[18px]">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc lacus vel facilisis volutpat est.</p>
+                    </article>
+                </div>
             </section>
         </main>
 
