--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,30 @@
                     </article>
                 </div>
             </section>
+
+            <section class="lg:max-w-[1200px] items-center gap-10 hidden lg:flex max-w-[350px] m-auto w-[100%] h-[700px] rounded-[20px]" style="background-image: linear-gradient(#211F54); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                <div class="self-end">
+                    <img src="./images/Group (1).png" class="w-[518px] h-[676px]">
+                </div>
+                    <aside class="w-[45%] text-white flex flex-col gap-4">
+                        <p>Covid-19 sanitization</p>
+                        <h1 class="text-[40px] font-bold">We follow guidelines to keep you safe from the COVID-19 virus</h1>
+                    <p>Lobortis mattis odio leo eget mauris met aliquet semper molestie sollicitudin congue massa mauris lectus.</p>
+                    <div class="lg:flex hidden items-center gap-3">
+                <div>
+                    <button class="bg-[#0075FF] font-bold text-[20px] px-8 py-5 rounded-[20px] text-white">Get a free quote</button>
+                </div>
+                <div class="flex items-center">
+                    <img src="./images/IMAGE (2).png" alt="">
+                    <div class="text-white">
+                        <p class=" text-[20px]">Call us now</p>
+                        <h1 class=" text-[25px] font-bold">(414) 567 - 2109</h1>
+                    </div>
+                </div>
+            </div>
+                    </aside>
+            </section>
+
         </main>
 
 
