--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,54 @@
                     </aside>
             </section>
 
+            <section class="lg:max-w-[1200px] max-w-[350px] justify-between items-center m-auto flex lg:flex-row flex-col lg:gap-0 gap-5">
+                <img src="./images/IMAGE (6).png" alt="">
+                <aside class="lg:w-[40%] w-[100%] flex flex-col gap-5">
+                    <h1 class="text-[#211F54] text-[40px] font-bold">We cover all areas of your home or office</h1>
+                    <p class="text-[#6E7191]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="flex items-center gap-5">
+                            <article class="flex flex-col gap-4">
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Bathrooms</h1>
+                                </div>
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Kitchens</h1>
+                                </div>
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Living <br> Rooms</h1>
+                                </div>
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Carpets</h1>
+                                </div>
+                            </article>
+                            <article class="flex flex-col gap-4">
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Bedrooms</h1>
+                                </div>
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Offices</h1>
+                                </div>
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Businesses</h1>
+                                </div>
+                                <div class="flex items-center gap-3">
+                                    <img src="./images/IMAGE (7).png" alt="">
+                                    <h1>Windows</h1>
+                                </div>
+                            </article>
+                        </div>
+                        <div>
+                            <button class="bg-[#0075FF] px-5 py-3 rounded-[10px] text-white">Get a free quote</button>
+                        </div>
+                </aside>
+            </section>
         </main>
 
 
