--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,33 @@
                         </div>
                 </aside>
             </section>
+
+            <section class="lg:max-w-[1200px] max-w-[350px] m-auto flex lg:flex-row flex-col w-[100%] items-center justify-between">
+                <aside class="flex flex-col gap-5 lg:w-[40%] ">
+                    <h1 class="text-[#211F54] text-[40px] font-bold">What makes us <br> different?</h1>
+                    <p class="text-[#6E7191]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <p class="text-[#6E7191] text-[13px]">Sed ut perspiciatis unde omnis iste natus error sit atem accusantium doloremque laudantiu sed ut.</p>
+                <div class="flex lg:flex-row flex-col justify-between">
+                    <div>
+                        <h1 class="text-[#211F54] text-[60px] font-bold">10<span class="text-[#0075FF]">+</span></h1>
+                        <p class="text-[#6E7191] text-[20px]">Years</p>
+                    </div>
+                    <div>
+                        <h1 class="text-[#211F54] text-[60px] font-bold">5k<span class="text-[#0075FF]">+</span></h1>
+                        <p  class="text-[#6E7191] text-[20px]">Clients</p>
+                    </div>
+                    <div>
+                        <h1 class="text-[#211F54] text-[60px] font-bold">20k<span class="text-[#0075FF]">+</span></h1>
+                        <p class="text-[#6E7191] text-[20px]">Jobs done</p>
+                    </div>
+                </div>
+                <div>
+                    <button class="bg-[#0075FF] px-5 py-3 text-white rounded-[10px]">Get a free quote</button>
+                </div>
+                </aside>
+                <img src="./images/IMAGE (8).png" alt="">
+            </section>
+
         </main>
 
 
