--- a/src/index.html
+++ b/src/index.html
@@ -198,6 +198,46 @@
                 <img src="./images/IMAGE (8).png" alt="">
             </section>
 
+            <section class="w-[100%] max-w-[350px] lg:max-w-[1200px] m-auto flex flex-col gap-3">
+                <div class="w-[100%] flex items-center lg:flex-row flex-col">
+                    <div class="lg:w-[45%]">
+                        <h1 class="text-[#211F54] text-[40px] font-bold">Articles & resources</h1>
+                        <p class="text-[#6E7191] text-[20px]">Lobortis mattis odio leo eget mauris met aliquet semper molestie sollicitudin congue massa mauris lectus.</p>
+                    </div>
+                    <div class="w-[50%] flex gap-3 justify-end lg:flex-row flex-col">
+                        <button class="bg-[#0075FF] text-white rounded-[10px] px-4 py-3">Get a free quote</button>
+                        <button class=" text-black border-[#EFF0F6] border-[3px] rounded-[10px] px-4 py-3">Get a free quote</button>
+                    </div>
+                </div>
+
+                <div class="w-[100%] flex justify-between lg:gap-4 gap-[100px] lg:flex-row flex-col">
+                    <article class="lg:w-[50%] w-[100%]">
+                        <img src="./images/Frame.png" alt="">
+                        <article class="border-[#EFF0F6] h-auto  border-[2px] w-[90%] m-auto px-10 lg:h-[250px] flex flex-col justify-evenly">
+                            <h1 class="text-[#211F54] text-[25px] font-bold">8 best vacuum cleaners to clean any mess for your home in 2022</h1>
+                            <p class="text-[#6E7191] text-[20px]">Lorem ipsum dolor sit amet conse ctetur adip iscing elit justo quis odio sit sit ac port titor sit males.</p>
+                        <div class="flex justify-between items-center">
+                            <p class="text-[#211F54]">Jan 28, 2022</p>
+                            <div class="bg-[#0075FF] px-5 py-5"></div>
+                        </div>
+                        </article>
+                    </article>
+                    <article class="lg:w-[50%] w-[100%]">
+                        <img src="./images/Frame (1).png" alt="">
+                        <article class="border-[#EFF0F6]  border-[2px] w-[90%] m-auto px-10 lg:h-[250px] h-auto flex flex-col justify-evenly">
+                            <h1 class="text-[#211F54] text-[25px] font-bold">How to properly disinfect your phone and other electronics</h1>
+                            <p class="text-[#6E7191] text-[20px]">Lorem ipsum dolor sit amet conse ctetur adip iscing elit justo quis odio sit sit ac port titor sit males.</p>
+                        <div class="flex justify-between items-center">
+                            <p class="text-[#211F54]">Feb 1, 2022</p>
+                            <div class="bg-[#0075FF] px-5 py-5"></div>
+                        </div>
+                        </article>
+                    </article>
+               
+                </div>
+
+            </section>
+
         </main>
 
 
