--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         </section>
     </header>
 
-        <main>
+        <main class="flex flex-col gap-[100px]">
             <section class="lg:max-w-[1200px] flex flex-col gap-8 m-auto max-w-[350px]">
                 <h1 class="text-center text-[#211F54] text-[50px] font-bold">How our service works?</h1>
                 <p class="text-center text-[#6E7191] text-[20px]">Sagittis nibh scelerisque vitae eget vulputate sem elementum sed <br> neque nisi felis non ultrices massa id egestas quam velit pretium nu.</p>
@@ -233,13 +233,60 @@
                         </div>
                         </article>
                     </article>
-               
                 </div>
-
             </section>
-
         </main>
 
+        <footer class="flex flex-col max-w-[350px]  lg:max-w-[1200px] m-auto gap-10 mt-[200px] lg:text-start text-center">
+            <div class="flex justify-between lg:flex-row flex-col lg:gap-0 gap-5">
+                <article class="lg:w-[23%] w-[100%] flex flex-col gap-4">
+                    <h1 class="text-[#211F54] text-[30px] font-bold">Quality cleaning for your home</h1>
+                    <p class="text-[#6E7191] text-[18px]">Lorem ipsum dolor sit amet cteturdo adipiscing elit, sed do eiusmo.</p>
+                    <div class="flex gap-7 lg:justify-start justify-center">
+                        <img src="./images/Rectangle.png" alt="">
+                        <img src="./images/Rectangle.png" alt="">
+                        <img src="./images/Rectangle.png" alt="">
+                        <img src="./images/Rectangle.png" alt="">
+                        <img src="./images/Rectangle.png" alt="">
+                    </div>
+                </article>
+                <article class="text-[#6E7191] flex flex-col gap-5 lg:w-[22%] w-[100%]">
+                    <h1 class="text-[#211F54] text-[20px] font-bold">Contact us</h1>
+                    <p>1827 Nickel Road, Los Angeles, <br> CA, 90017, United States</p>
+                    <p>(414) 567 - 2109</p>
+                    <p>contact@cleaning.com</p>
+                </article>
+                <article class="text-[#6E7191] flex flex-col gap-5 lg:w-[22%] w-[100%]">
+                    <h1 class="font-bold text-[#211F54]">Hours</h1>
+                    <div>
+                        <h1 class="font-bold text-[#211F54]">Monday to Friday</h1>
+                        <p class="text-[#6E7191]">6:00 AM - 9:00 PM</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-[#211F54]">Saturday & Sunday</h1>
+                        <p class="text-[#6E7191]">8:00 AM - 8:00 PM</p>
+                    </div>
+                </article>
+                <article class="text-[#6E7191] flex flex-col gap-5 lg:w-[22%] w-[100%]">
+                    <h1 class="text-[#211F54] text-[22px] font-bold">Get a free estimate</h1>
+                    <h1 class="text-[#0075FF] font-bold text-[24px]">(414) 567 - 2109</h1>
+                    <p class="text-[#6E7191]">Lorem ipsum dolor sit amet ectetur adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <button class="bg-[#0075FF] px-7 text-white text-[18px] rounded-[10px] py-3">Request a free quote</button>
+                    </div>
+                </article>
+            </div>
+
+                <div class="flex items-center lg:flex-row flex-col justify-between py-10">
+                    <div>
+                        <img src="./images/IMAGE.png" alt="">
+                    </div>
+                    <div>
+                        <p>Copyright © Cleaning X | Designed by <span class="text-[#0075FF] underline">BRIX Templates</span> <span>- Powered by</span> <span class="text-[#0075FF] underline">Webflow</span> <span class="text-[#0075FF] underline">Licenses</span></p>
+                    </div>
+                </div>
+
+        </footer>
 
 </body>
 </html>
